tests/error/linear_errors/branch_use_field2.err
Error: Copy violation (at $FILE:16:11)
   | 
14 |     if b:
15 |         measure(s.q2)
16 |     return s
   |            ^ Field `s.q2` with non-copyable type `qubit` cannot be
   |              returned ...

Note:
   | 
14 |     if b:
15 |         measure(s.q2)
   |                 ---- Field `s.q2` already consumed here

Guppy compilation failed due to 1 previous error
